Add Identity, JWT token Authorization

--- a/ApiForUrl/appsettings.json
+++ b/ApiForUrl/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source = (localDb)\\MSSQLLocalDB; Database = shortUrlDb;"
+  },
+  "JWT": {
+    "Secret": "this-is-secret-cvbndjhbvsbndjcshdjbshckscn-ksj",
+    "Audience": "user",
+    "Issuer": "http://localhost:44371/"
   }
 }
