--- a/ApiForUrl/appsettings.json
+++ b/ApiForUrl/appsettings.json
@@ -7,8 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source = (localDb)\\MSSQLLocalDB; Database = shortUrlDb;"
+    "TestUchun": "Host=192.168.32.161;Port=5432;Database=TestUchun;Username=postgres;Password=Mirabbos2001;"
   },
+  //"ConnectionStrings": {
+  //  "Default": "Data Source = (localDb)\\MSSQLLocalDB; Database = shortUrlDb;"
+  //},
   "JWT": {
     "Secret": "this-is-secret-cvbndjhbvsbndjcshdjbshckscn-ksj",
     "Audience": "user",
