--- a/ApiForUrl/appsettings.json
+++ b/ApiForUrl/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TestUchun": "Host=192.168.32.161;Port=5432;Database=TestUchun;Username=postgres;Password=Mirabbos2001;"
+    "Default": "Host=localhost;Port=5432;Database=ShorturlDb;Username=postgres;Password=1234;"
   },
   //"ConnectionStrings": {
   //  "Default": "Data Source = (localDb)\\MSSQLLocalDB; Database = shortUrlDb;"
